nginx-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
        - name: nginx
          image: dearguru95/nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app1-service
spec:
  selector:
    app: nginx-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
