ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: yourdomain.com #Replace yourdomain.com with your OpenShift route hostname (or configure a wildcard route if needed).
    http:
      paths:
      - path: /DevOps
        pathType: Prefix
        backend:
          service:
            name: devops-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
